--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/resize-slider-1.jpg" class="d-block w-100 slider-img" alt="...">
+              <img src="images/slider-1.jpg
+              " class="d-block w-100 slider-img" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="images/chuttersnap-aEnH4hJ_Mrs-unsplash.jpg" class="d-block w-100 slider-img" alt="...">
+              <img src="images/slider-2.jpg" class="d-block w-100 slider-img" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="images/decorated-banquet-hall-with-flowers.jpg" class="d-block w-100 slider-img" alt="...">
+              <img src="images/slider-3.jpg" class="d-block w-100 slider-img" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
