--- a/index.html
+++ b/index.html
@@ -49,15 +49,31 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active postion-relative">
               <img src="images/slider-1.jpg
               " class="d-block w-100 slider-img" alt="...">
+              <div class="position-absolute top-50 start-50 translate-middle text-center">
+                <h1 class="text-white display-3 fw-bold mb-3">The perfect venue for your
+                  next event</h1>
+                  <p class="text-white fs-6 mb-4">We ready for: •	Wedding /Gaye Holud •	Marriage Anniversary •	Birthday party</p>
+                  <button class="btn btn-outline-light btn-main">Book Now</button>
+              </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item postion-relative">
               <img src="images/slider-2.jpg" class="d-block w-100 slider-img" alt="...">
+              <div class="position-absolute top-50 start-50 translate-middle text-center">
+                <h1 class="text-white display-3 fw-bold mb-3">Enjoy the best food in town</h1>
+                  <p class="text-white fs-6 mb-4">We provide: •Bengali • Chines •  Japannes • Thai • Indian food</p>
+                  <button class="btn btn-outline-light btn-main">Book Now</button>
+              </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item postion-relative">
               <img src="images/slider-3.jpg" class="d-block w-100 slider-img" alt="...">
+              <div class="position-absolute top-50 start-50 translate-middle text-center">
+                <h1 class="text-white display-3 fw-bold mb-3">Make somthing special for future</h1>
+                  <p class="text-white fs-6 mb-4">We ready for: •	Wedding /Gaye Holud •	Marriage Anniversary •	Birthday party</p>
+                  <button class="btn btn-outline-light btn-main ">Book Now</button>
+              </div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
