--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-      <section>
+      <section class="margin-bottom-large">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -86,6 +86,116 @@
           </button>
         </div>
       </section>
+      <!-- slider end -->
+
+      <!-- package start -->
+      <section class="margin-bottom-large">
+        <div class="container">
+          <h2 class="text-center mb-5">Our Package</h2>
+          <div class="row g-4 row-cols-1 row-cols-md-2 row-cols-lg-4">
+            <div class="col">
+              <div class="border rounded-3 py-3 px-4">
+                <h3 class="text-dark-blue display-6 heading-tertiary mb-4 pt-2">$400</h3>
+                <h4 class="text-dark-blue mb-3 fw-bold">Business fair</h4>
+                <p>For most businesses event 
+                  like book fair, craft fair.</p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">limited space access</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Secuirty facility</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">event support</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Decoration design</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Per day bill</span></p>
+                <button class="btn rounded-pill btn-price mt-3 d-block w-100">Chose Plane</button>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="border rounded-3 py-3 px-4">
+                <h3 class="text-dark-blue display-6 heading-tertiary mb-4 pt-2">$600</h3>
+                <h4 class="text-dark-blue mb-3 fw-bold">Wedding plus</h4>
+                <p>For most weddings with premium plans</p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Full space access</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Dedicated team</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Buffet food</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">premium Decoration</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">pay as plan</span></p>
+                <button class="btn rounded-pill btn-price mt-3 d-block w-100">Chose Plane</button>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="border  py-3 px-4 custome-price-cart">
+                <h3 class="display-6 heading-tertiary mb-4 pt-4">$900</h3>
+                <h4 class="mb-3 fw-bold">wedding basic</h4>
+                <p>For weddings with basic plan
+                  and limited item</p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">limited space access</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Secuirty facility</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">event support</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                  </svg><span class="ms-2">Decoration design</span></p>
+                  <p class="d-flex align-items-center p-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Per day bill</span></p>
+                <button class="btn rounded-pill btn-light p-2 mt-3 w-100">Chose Plane</button>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="border rounded-3 py-3 px-4">
+                <h3 class="text-dark-blue display-6 heading-tertiary mb-4 pt-2">$1400</h3>
+                <h4 class="text-dark-blue mb-3 fw-bold">Corporate event</h4>
+                <p>For most corporate business 
+                  events</p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                  </svg><span class="ms-2">Full space access</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Secuirty facility</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">event support</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">Decoration design</span></p>
+                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                </svg><span class="ms-2">pay as plan</span></p>
+                <button class="btn rounded-pill btn-price mt-3 w-100">Chose Plane</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- package end -->
+    </main>
     </main>
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
