--- a/index.html
+++ b/index.html
@@ -143,28 +143,29 @@
             </div>
 
             <div class="col">
-              <div class="border  py-3 px-4 custome-price-cart">
-                <h3 class="display-6 heading-tertiary mb-4 pt-4">$900</h3>
-                <h4 class="mb-3 fw-bold">wedding basic</h4>
-                <p>For weddings with basic plan
-                  and limited item</p>
-                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
-                </svg><span class="ms-2">limited space access</span></p>
-                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
-                </svg><span class="ms-2">Secuirty facility</span></p>
-                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
-                </svg><span class="ms-2">event support</span></p>
-                  <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                <div class="border  py-3 px-4 custome-price-cart">
+                  <h3 class="display-6 heading-tertiary mb-4 pt-4">$900</h3>
+                  <h4 class="mb-3 fw-bold">wedding basic</h4>
+                  <p>For weddings with basic plan
+                    and limited item</p>
+                    <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
-                  </svg><span class="ms-2">Decoration design</span></p>
-                  <p class="d-flex align-items-center p-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
-                </svg><span class="ms-2">Per day bill</span></p>
-                <button class="btn rounded-pill btn-light p-2 mt-3 w-100">Chose Plane</button>
-              </div>
+                  </svg><span class="ms-2">limited space access</span></p>
+                    <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                  </svg><span class="ms-2">Secuirty facility</span></p>
+                    <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                  </svg><span class="ms-2">event support</span></p>
+                    <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                    </svg><span class="ms-2">Decoration design</span></p>
+                    <p class="d-flex align-items-center p-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
+                  </svg><span class="ms-2">Per day bill</span></p>
+                  <button class="btn rounded-pill btn-light p-2 mt-3 w-100">Chose Plane</button>
+                  <p class="text-white rounded-pill hot">Hot</p>
+                </div>
             </div>
 
             <div class="col">
