--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
       <section class="margin-bottom-large">
         <div class="container">
           <h2 class="text-center mb-5">Our Package</h2>
-          <div class="row g-4 row-cols-1 row-cols-md-2 row-cols-lg-4">
+          <div class="row g-4 row-cols-1 row-cols-sm-2 row-cols-lg-4">
             <div class="col">
-              <div class="border rounded-3 py-3 px-4">
+              <div class=" rounded-3 py-3 px-4 text-secondary h-100 d-flex flex-column justify-content-center">
                 <h3 class="text-dark-blue display-6 heading-tertiary mb-4 pt-2">$400</h3>
                 <h4 class="text-dark-blue mb-3 fw-bold">Business fair</h4>
-                <p>For most businesses event 
+                <p class="text-secondary">For most businesses event 
                   like book fair, craft fair.</p>
                   <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
-                </svg><span class="ms-2">limited space access</span></p>
+                </svg><span class="ms-2 ">limited space access</span></p>
                   <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                 </svg><span class="ms-2">Secuirty facility</span></p>
@@ -119,7 +119,7 @@
             </div>
 
             <div class="col">
-              <div class="border rounded-3 py-3 px-4">
+              <div class="rounded-3 py-3 px-4 text-secondary h-100 d-flex flex-column justify-content-center">
                 <h3 class="text-dark-blue display-6 heading-tertiary mb-4 pt-2">$600</h3>
                 <h4 class="text-dark-blue mb-3 fw-bold">Wedding plus</h4>
                 <p>For most weddings with premium plans</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="col">
-                <div class="border  py-3 px-4 custome-price-cart">
+                <div class="pb-5 pt-4 px-4 custome-price-cart">
                   <h3 class="display-6 heading-tertiary mb-4 pt-4">$900</h3>
                   <h4 class="mb-3 fw-bold">wedding basic</h4>
                   <p>For weddings with basic plan
@@ -169,10 +169,10 @@
             </div>
 
             <div class="col">
-              <div class="border rounded-3 py-3 px-4">
+              <div class=" rounded-3 py-3 px-4 text-secondary h-100  d-flex flex-column justify-content-center">
                 <h3 class="text-dark-blue display-6 heading-tertiary mb-4 pt-2">$1400</h3>
                 <h4 class="text-dark-blue mb-3 fw-bold">Corporate event</h4>
-                <p>For most corporate business 
+                <p >For most corporate business 
                   events</p>
                   <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
