--- a/index.html
+++ b/index.html
@@ -293,6 +293,20 @@
       <!-- Frequently Asked Questions end -->
     </main>
     </main>
+
+    <footer class="text-white" >
+      <div class="container d-flex flex-column flex-sm-row justify-content-sm-between  align-items-center">
+        <div class="mb-3">
+          &copy; 2022 SSI. All rights reserved.
+        </div>
+        <div class="d-flex flex-column">
+          <img src="images/App Store Badge.png" alt="app store">
+          <img src="images/Google Play Badge.png" alt="play store">
+        </div>
+      </div>
+    </footer>
+
+
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
