--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active postion-relative">
               <img src="images/slider-1.jpg
-              " class="d-block w-100 slider-img" alt="...">
+              " class="d-block w-100 slider-img img-fluid" alt="slider image 1">
               <div class="position-absolute top-50 start-50 translate-middle text-center">
                 <h1 class="text-white display-3 fw-bold mb-3">The perfect venue for your
                   next event</h1>
@@ -61,7 +61,7 @@
               </div>
             </div>
             <div class="carousel-item postion-relative">
-              <img src="images/slider-2.jpg" class="d-block w-100 slider-img" alt="...">
+              <img src="images/slider-2.jpg" class="d-block w-100 slider-img img-fluid" alt="slider image 2">
               <div class="position-absolute top-50 start-50 translate-middle text-center">
                 <h1 class="text-white display-3 fw-bold mb-3">Enjoy the best food in town</h1>
                   <p class="text-white fs-6 mb-4">We provide: •Bengali • Chines •  Japannes • Thai • Indian food</p>
@@ -69,7 +69,7 @@
               </div>
             </div>
             <div class="carousel-item postion-relative">
-              <img src="images/slider-3.jpg" class="d-block w-100 slider-img" alt="...">
+              <img src="images/slider-3.jpg" class="d-block w-100 slider-img img-fluid" alt="slider imge-3">
               <div class="position-absolute top-50 start-50 translate-middle text-center">
                 <h1 class="text-white display-3 fw-bold mb-3">Make somthing special for future</h1>
                   <p class="text-white fs-6 mb-4">We ready for: •	Wedding /Gaye Holud •	Marriage Anniversary •	Birthday party</p>
@@ -92,8 +92,8 @@
       <!-- package start -->
       <section class="margin-bottom-large">
         <div class="container">
-          <h2 class="text-center mb-5">Our Package</h2>
-          <div class="row g-4 row-cols-1 row-cols-sm-2 row-cols-lg-4">
+          <h2 class="text-center fs-1  mb-5">Our Package</h2>
+          <div class="row g-5 row-cols-1 row-cols-sm-1 row-cols-md-2  row-cols-lg-3 row-cols-xl-4 mt-2">
             <div class="col">
               <div class=" rounded-3 py-3 px-4 text-secondary h-100 d-flex flex-column justify-content-center">
                 <h3 class="text-dark-blue display-6 heading-tertiary mb-4 pt-2">$400</h3>
@@ -115,12 +115,12 @@
                   <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                 </svg><span class="ms-2">Per day bill</span></p>
-                <button class="btn rounded-pill btn-price mt-3 d-block w-100">Chose Plane</button>
+                <button class="btn rounded-pill p-2 btn-price mt-3 d-block w-100">Chose Plane</button>
               </div>
             </div>
 
             <div class="col">
-              <div class="rounded-3 py-3 px-4 text-secondary h-100 d-flex flex-column justify-content-center">
+              <div class=" rounded-3 py-3 px-4 text-secondary h-100 d-flex flex-column justify-content-center">
                 <h3 class="text-dark-blue display-6 heading-tertiary mb-4 pt-2">$600</h3>
                 <h4 class="text-dark-blue mb-3 fw-bold">Wedding plus</h4>
                 <p>For most weddings with premium plans</p>
@@ -139,15 +139,15 @@
                   <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                 </svg><span class="ms-2">pay as plan</span></p>
-                <button class="btn rounded-pill btn-price mt-3 d-block w-100">Chose Plane</button>
+                <button class="btn rounded-pill p-2 btn-price mt-3 d-block w-100">Chose Plane</button>
               </div>
             </div>
 
             <div class="col">
-                <div class="pb-5 pt-4 px-4 custome-price-cart">
-                  <h3 class="display-6 heading-tertiary mb-4 pt-4">$900</h3>
+                <div class="pb-4  px-4 custome-price-cart">
+                  <h3 class="display-6 heading-tertiary mb-4 pt-5">$900</h3>
                   <h4 class="mb-3 fw-bold">wedding basic</h4>
-                  <p>For weddings with basic plan
+                  <p class="pt-2">For weddings with basic plan
                     and limited item</p>
                     <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
@@ -164,7 +164,7 @@
                     <p class="d-flex align-items-center p-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                   </svg><span class="ms-2">Per day bill</span></p>
-                  <button class="btn rounded-pill btn-light p-2 mt-3 w-100">Chose Plane</button>
+                  <button class="btn rounded-pill btn-light p-2 mt-3 w-100 text-primary" style="font-weight: 500;">Chose Plane</button>
                   <p class="text-white rounded-pill hot">Hot</p>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                   <p class="d-flex align-items-center pb-1 mb-1"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 check-icon" width="22" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                 </svg><span class="ms-2">pay as plan</span></p>
-                <button class="btn rounded-pill btn-price mt-3 w-100">Chose Plane</button>
+                <button class="btn rounded-pill p-2 btn-price mt-3 w-100">Chose Plane</button>
               </div>
             </div>
           </div>
@@ -200,8 +200,8 @@
 
       <!-- Frequently Asked Questions start -->
       <section class="margin-bottom-large">
-        <div class="container">
-          <h2 class="text-center mb-5">Frequently Asked Questions</h2>
+        <div class="container overflow-hidden">
+          <h2 class="text-center fs-1 mb-5">Frequently Asked Questions</h2>
           <div class="row row-cols-1 row-cols-md-2 g-5 align-items-center">
             <div class="col">
               <div>
@@ -284,7 +284,7 @@
             </div>
             <div class="col">
               <div class="d-flex align-items-center h-100">
-                <img src="images/people.png" alt="" class="img-fluid">
+                <img src="images/people.png" alt="people photo" class="img-fluid">
               </div>
             </div>
           </div>
@@ -295,13 +295,16 @@
     </main>
 
     <footer class="text-white" >
-      <div class="container d-flex flex-column flex-sm-row justify-content-sm-between  align-items-center">
-        <div class="mb-3">
-          &copy; 2022 SSI. All rights reserved.
-        </div>
-        <div class="d-flex flex-column">
-          <img src="images/App Store Badge.png" alt="app store">
-          <img src="images/Google Play Badge.png" alt="play store">
+      <div class="container">
+        <div class="d-flex flex-column flex-sm-row justify-content-sm-between  align-items-center">
+          <div class="mb-3">
+            &copy; 2022 SSI. All rights reserved.
+          </div>
+          <div class="d-flex flex-column">
+            <p class="fs-5">Get the App</p>
+            <a href="https://apps.apple.com/app/id978058048?scm=1003.4.icms-zebra-100022982-2874591.OTHER_5436817469_2538051&spm=a2a0e.home.footer_top.21.735212f7Qqmugt" target="_blank"><img src="images/App Store Badge.png" alt="app store"></a>
+           <a href="https://play.google.com/store/apps/details?id=com.asteroidgamestudio.royal.weddingplanner.eventdesigner" target="_blank"> <img src="images/Google Play Badge.png" alt="play store"></a>
+          </div>
         </div>
       </div>
     </footer>
