--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- slider end -->
 
       <!-- package start -->
-      <section class="margin-bottom-large position-relative">
+      <section class="margin-bottom-large position-relative py-5 overflow-hidden">
         <div class="container">
           <h2 class="text-center fs-1  mb-5">Our Package</h2>
           <div class="row g-5 row-cols-1 row-cols-sm-1 row-cols-md-2  row-cols-lg-3 row-cols-xl-4 mt-2">
@@ -196,18 +196,73 @@
           </div>
         </div>
         <!-- Toster  -->
-     <div class="toast align-items-center show fade position-absolute top-0 bg-white" role="alert" aria-live="assertive" aria-atomic="true" style="right: 10px;">
-      <div class="d-flex">
-        <div class="toast-body d-flex align-items-center">
-          <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7" />
-          </svg> <span class="ms-2">20% off on next booking</span>
-       </div>
-        <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-      </div>
-    </div>
+        <div class="toast align-items-center show fade position-absolute top-0 bg-white" role="alert" aria-live="assertive" aria-atomic="true" style="right: 5px;">
+          <div class="d-flex">
+            <div class="toast-body d-flex align-items-center">
+              <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7" />
+              </svg> <span class="ms-2">20% off on next booking</span>
+          </div>
+            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+        </div>
       </section>
       <!-- package end -->
+
+      <!-- Gallery start-->
+      <section class="margin-bottom-large bg-light p-5">
+        <div class="overflow-hidden">
+          <h2 class="text-center fs-1 mb-5">See Photo Gallery</h2>
+          <div class="row g-4 row-cols-2 row-cols-md-3 row-cols-lg-4">
+            <div class="col">
+              <div>
+                <img src="images/gallery-2.jpg" alt="gallery photo 1" class="d-block w-100 gallery-photo">
+              </div>
+            </div>
+            <div class="col">
+              <div>
+                <img src="images/gallery-1.jpg" alt="gallery photo 2" class="d-block w-100 gallery-photo">
+              </div>
+            </div>
+
+            <div class="col">
+              <div>
+                <img src="images/gallery-3.jpg" alt="gallery photo 3" class="d-block w-100 gallery-photo">
+              </div>
+            </div>
+
+            <div class="col">
+              <div>
+                <img src="images/gallery-4.jpg" alt="gallery photo 4" class="d-block w-100 gallery-photo">
+              </div>
+            </div>
+            <div class="col">
+              <div>
+                <img src="images/gallery-5.jpg" alt="gallery photo 5" class="d-block w-100 gallery-photo">
+              </div>
+            </div>
+
+            <div class="col">
+              <div>
+                <img src="images/gallery-6.jpg" alt="gallery photo 6" class="d-block w-100 gallery-photo">
+              </div>
+            </div>
+
+            <div class="col">
+              <div>
+                <img src="images/gallery-7.jpg" alt="gallery photo 7" class="d-block w-100 gallery-photo">
+              </div>
+            </div>
+
+            <div class="col">
+              <div>
+                <img src="images/gallery-8.jpg" alt="gallery photo 8" class="d-block w-100 gallery-photo">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Gallery end-->
 
       <!-- Frequently Asked Questions start -->
       <section class="margin-bottom-large">
@@ -302,6 +357,7 @@
         </div>
       </section>
       <!-- Frequently Asked Questions end -->
+
     </main>
 
     <footer class="text-white" >
