gallery and button modify

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h1 class="text-white display-3 fw-bold mb-3">The perfect venue for your
                   next event</h1>
                   <p class="text-white fs-6 mb-4">We ready for: •	Wedding /Gaye Holud •	Marriage Anniversary •	Birthday party</p>
-                  <button class="btn btn-outline-light btn-main">Book Now</button>
+                  <a href="https://www.booking.com/" class="btn btn-main">Book Now</a>
               </div>
             </div>
             <div class="carousel-item postion-relative">
