--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
           <div class="carousel-inner">
             <div class="carousel-item active postion-relative">
               <img src="images/slider-1.jpg
-              " class="d-block w-100 slider-img img-fluid" alt="slider image 1">
-              <div class="position-absolute top-50 start-50 translate-middle text-center">
+              " class="d-block slider-img img-fluid" alt="slider image 1">
+              <div class="position-absolute top-50 start-50 translate-middle text-center" style="width: 85%;">
                 <h1 class="text-white display-3 fw-bold mb-3">The perfect venue for your
                   next event</h1>
                   <p class="text-white fs-6 mb-4">We ready for: •	Wedding /Gaye Holud •	Marriage Anniversary •	Birthday party</p>
-                  <a href="https://www.booking.com/" class="btn btn-main">Book Now</a>
+                  <a href="https://www.booking.com/" class="btn btn-main" role="button">Book Now</a>
               </div>
             </div>
             <div class="carousel-item postion-relative">
               <img src="images/slider-2.jpg" class="d-block w-100 slider-img img-fluid" alt="slider image 2">
-              <div class="position-absolute top-50 start-50 translate-middle text-center">
+              <div class="position-absolute top-50 start-50 translate-middle text-center" style="width: 85%;">
                 <h1 class="text-white display-3 fw-bold mb-3">Enjoy the best food in town</h1>
                   <p class="text-white fs-6 mb-4">We provide: •Bengali • Chines •  Japannes • Thai • Indian food</p>
-                  <button class="btn btn-outline-light btn-main">Book Now</button>
+                  <<a href="https://www.booking.com/" class="btn btn-main" role="button">Book Now</a>
               </div>
             </div>
             <div class="carousel-item postion-relative">
               <img src="images/slider-3.jpg" class="d-block w-100 slider-img img-fluid" alt="slider imge-3">
-              <div class="position-absolute top-50 start-50 translate-middle text-center">
+              <div class="position-absolute top-50 start-50 translate-middle text-center" style="width: 85%;">
                 <h1 class="text-white display-3 fw-bold mb-3">Make somthing special for future</h1>
                   <p class="text-white fs-6 mb-4">We ready for: •	Wedding /Gaye Holud •	Marriage Anniversary •	Birthday party</p>
-                  <button class="btn btn-outline-light btn-main ">Book Now</button>
+                  <a href="https://www.booking.com/" class="btn btn-main" role="button">Book Now</a>
               </div>
             </div>
           </div>
@@ -90,9 +90,9 @@
       <!-- slider end -->
 
       <!-- package start -->
-      <section class="margin-bottom-large position-relative py-5 overflow-hidden">
+      <section class="margin-bottom-large position-relative pb-5 overflow-hidden">
         <div class="container">
-          <h2 class="text-center fs-1  mb-5">Our Package</h2>
+          <h2 class="text-center fs-1 ">Our Package</h2>
           <div class="row g-5 row-cols-1 row-cols-sm-1 row-cols-md-2  row-cols-lg-3 row-cols-xl-4 mt-2">
             <div class="col">
               <div class=" rounded-3 py-3 px-4 text-secondary h-100 d-flex flex-column justify-content-center">
@@ -196,7 +196,7 @@
           </div>
         </div>
         <!-- Toster  -->
-        <div class="toast align-items-center show fade position-absolute top-0 bg-white" role="alert" aria-live="assertive" aria-atomic="true" style="right: 5px;">
+        <div class="toast align-items-center show fade position-absolute bg-white" role="alert" aria-live="assertive" aria-atomic="true" style="right: 5px; top: 80px;">
           <div class="d-flex">
             <div class="toast-body d-flex align-items-center">
               <svg xmlns="http://www.w3.org/2000/svg" class="text-primary" width="24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -215,47 +215,47 @@
           <h2 class="text-center fs-1 mb-5">See Photo Gallery</h2>
           <div class="row g-4 row-cols-2 row-cols-md-3 row-cols-lg-4">
             <div class="col">
-              <div>
+              <div class="overflow-hidden">
                 <img src="images/gallery-2.jpg" alt="gallery photo 1" class="d-block w-100 gallery-photo">
               </div>
             </div>
             <div class="col">
-              <div>
+              <div class="overflow-hidden">
                 <img src="images/gallery-1.jpg" alt="gallery photo 2" class="d-block w-100 gallery-photo">
               </div>
             </div>
 
             <div class="col">
-              <div>
+              <div class="overflow-hidden">
                 <img src="images/gallery-3.jpg" alt="gallery photo 3" class="d-block w-100 gallery-photo">
               </div>
             </div>
 
             <div class="col">
-              <div>
+              <div class="overflow-hidden">
                 <img src="images/gallery-4.jpg" alt="gallery photo 4" class="d-block w-100 gallery-photo">
               </div>
             </div>
             <div class="col">
-              <div>
+              <div class="overflow-hidden">
                 <img src="images/gallery-5.jpg" alt="gallery photo 5" class="d-block w-100 gallery-photo">
               </div>
             </div>
 
             <div class="col">
-              <div>
+              <div class="overflow-hidden">
                 <img src="images/gallery-6.jpg" alt="gallery photo 6" class="d-block w-100 gallery-photo">
               </div>
             </div>
 
             <div class="col">
-              <div>
+              <div class="overflow-hidden">
                 <img src="images/gallery-7.jpg" alt="gallery photo 7" class="d-block w-100 gallery-photo">
               </div>
             </div>
 
             <div class="col">
-              <div>
+              <div class="overflow-hidden">
                 <img src="images/gallery-8.jpg" alt="gallery photo 8" class="d-block w-100 gallery-photo">
               </div>
             </div>
