--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
             <div class="carousel-item active postion-relative">
               <img src="images/slider-1.jpg
               " class="d-block slider-img img-fluid" alt="slider image 1">
-              <div class="position-absolute top-50 start-50 translate-middle text-center" style="width: 85%;">
+              <div class="position-absolute top-50 start-50 translate-middle text-center slider">
                 <h1 class="text-white display-3 fw-bold mb-3">The perfect venue for your
                   next event</h1>
                   <p class="text-white fs-6 mb-4">We ready for: •	Wedding /Gaye Holud •	Marriage Anniversary •	Birthday party</p>
-                  <a href="https://www.booking.com/" class="btn btn-main" role="button">Book Now</a>
+                  <a href="https://www.booking.com/" class="btn btn-book" role="button">Book Now</a>
               </div>
             </div>
             <div class="carousel-item postion-relative">
               <img src="images/slider-2.jpg" class="d-block w-100 slider-img img-fluid" alt="slider image 2">
-              <div class="position-absolute top-50 start-50 translate-middle text-center" style="width: 85%;">
+              <div class="position-absolute top-50 start-50 translate-middle text-center slider">
                 <h1 class="text-white display-3 fw-bold mb-3">Enjoy the best food in town</h1>
                   <p class="text-white fs-6 mb-4">We provide: •Bengali • Chines •  Japannes • Thai • Indian food</p>
-                  <<a href="https://www.booking.com/" class="btn btn-main" role="button">Book Now</a>
+                  <<a href="https://www.booking.com/" class="btn btn-book" role="button">Book Now</a>
               </div>
             </div>
             <div class="carousel-item postion-relative">
               <img src="images/slider-3.jpg" class="d-block w-100 slider-img img-fluid" alt="slider imge-3">
-              <div class="position-absolute top-50 start-50 translate-middle text-center" style="width: 85%;">
+              <div class="position-absolute top-50 start-50 translate-middle text-center slider">
                 <h1 class="text-white display-3 fw-bold mb-3">Make somthing special for future</h1>
                   <p class="text-white fs-6 mb-4">We ready for: •	Wedding /Gaye Holud •	Marriage Anniversary •	Birthday party</p>
-                  <a href="https://www.booking.com/" class="btn btn-main" role="button">Book Now</a>
+                  <a href="https://www.booking.com/" class="btn btn-book" role="button">Book Now</a>
               </div>
             </div>
           </div>
@@ -263,6 +263,43 @@
         </div>
       </section>
       <!-- Gallery end-->
+
+      <!-- review start -->
+      <section class="margin-bottom-large">
+        <div class="container overflow-hidden p-4">
+          <h2 class="text-center fs-1 mb-5">Happy Clients says</h2>
+          <div class="row g-4 row-cols-1 row-cols-sm-2 row-cols-lg-3">
+            <div class="col">
+              <div class="shadow rounded-3">
+                <div class="d-flex flex-column align-items-center px-4 py-3 h-100">
+                  <p class="text-center">I truly loved the venue. The staffs were so good, they were best at hospitality and services. The venue was very beautiful, the decor was superbly done.</p>
+                  <img src="images/person 1.png" alt="person 1" class="img-fluid">
+                  <p class="fw-bold mt-2">Amit Saha</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="shadow rounded-3">
+                <div class="d-flex flex-column align-items-center px-4 py-3 h-100">
+                  <p class="text-center">It was a really alluring experience for us here. The food was very good and the decorations were totally amazing. We were very happy with their overall services.</p>
+                  <img src="images/person 2.png" alt="person 1" class="img-fluid">
+                  <p class="fw-bold mt-2">Mamun Hasan</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="shadow rounded-3">
+                <div class="d-flex flex-column align-items-center px-4 py-3">
+                  <p class="text-center">I have the most extreme commendations to state about their food. Weddings are about the food and the food they served was fantastic. the food was awesome</p>
+                  <img src="images/person 3.png" alt="person 1" class="img-fluid">
+                  <p class="fw-bold mt-2">Jonas Smith</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- review end -->
 
       <!-- Frequently Asked Questions start -->
       <section class="margin-bottom-large">
